# translate-agent

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose.yaml
